samples/_failures_safe/1761199952_5e17e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edf75155.c: In function ‘main’:
./samples/SAFE/__tmp_edf75155.c:119:25: error: missing terminating " character
  119 |         fprintf(stderr, "No input provided
      |                         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_edf75155.c:119:9: error: expected expression at end of input
  119 |         fprintf(stderr, "No input provided
      |         ^~~~~~~
./samples/SAFE/__tmp_edf75155.c:119:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edf75155.c:119:9: error: expected declaration or statement at end of input
